Refactor updated code